crates/wdl-grammar/tests/parsing/metadata-recovery/source.errors
error: expected metadata key, but found integer
  ┌─ tests/parsing/metadata-recovery/source.wdl:7:9
  │
7 │         1: 1
  │         ^ unexpected integer

