crates/wdl-grammar/tests/parsing/metadata-recovery/source.wdl
# This is a test of metadata section recovery.

version 1.1

task test {
    meta {
        1: 1
        baz: "bar"
    }
}
